Bug 225085 - Clicking on category doesn't show that category in ledger view
Summary: Clicking on category doesn't show that category in ledger view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-01 03:07 UTC by gumper1034
Modified: 2010-02-06 18:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gumper1034 2010-02-01 03:07:12 UTC
Version:           svn 1082460 (using KDE 4.3.4)
OS:                Linux
Installed from:    Archlinux Packages

If the option, 'Hide reconciled transactions" is active, double clicking on a category in the Categories window will open up the ledger view but nothing is displayed. If the 'Hide reconciled transactions' is not active, the category will be displayed properly.
Comment 1 Thomas Baumgart 2010-02-06 09:27:06 UTC
What is the status of the transactions in the 'C' column?
Comment 2 gumper1034 2010-02-06 14:04:28 UTC
When I dbl click on the category to open it up the 'C' column is empty for each entry.

If I go and check those entries in the normal ledger view some of the entries are marked with a 'C' or 'R' and some with nothing in that column. Either way nothing will show up when the 'Hide reconciled transactions' is active.
Comment 3 Thomas Baumgart 2010-02-06 16:05:02 UTC
Problem also applies to KMyMoney 1.0.2
Comment 4 Thomas Baumgart 2010-02-06 16:40:04 UTC
Oh, this is tricky. It is caused by pretty ancient code which I don't want to touch right now (MyMoneyTransactionFilter) as it is used by various parts of the application (incl. reporting) and I don't want to break them.

Short term proposal: Ignore the 'hide reconciled transactions' setting when showing a category in the ledger view

Long term proposal: Fix the whole thing.

Thoughts? Should we go for the short term solution?
Comment 5 gumper1034 2010-02-06 16:54:46 UTC
I think your short term solution would be good for now.

Come to think of it, why is it even necessary to ever hide reconciled transactions when showing a category? Doesn't it make more sense to always show all the transactions whether they're reconciled or not? For me I want to see all the entries for a category and I'm not really sure why you would want to filter them by whether they're reconciled or not. I would think that being able to display them by a date range would be a better option.
Comment 6 Thomas Baumgart 2010-02-06 18:19:08 UTC
SVN commit 1086206 by tbaumgart:

Only try to hide reconciled transactions in asset, liability and equity accounts.

BUG: 225085

 M  +2 -1      kgloballedgerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1086206