Only try to hide reconciled transactions in asset, liability and equity accounts.

BUG: 225085

svn path=/trunk/playground/office/kmymoney/; revision=1086206